After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705811 - First link is open in existing window in other workspace
First link is open in existing window in other workspace
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Interface
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-12 01:55 UTC by Gustavo Noronha (kov)
Modified: 2013-08-14 11:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Force an update on WNCK's knowledge of windows and workspaces (1.30 KB, patch)
2013-08-12 01:57 UTC, Gustavo Noronha (kov)
committed Details | Review

Description Gustavo Noronha (kov) 2013-08-12 01:55:11 UTC
How to reproduce: quit epiphany. Open epiphany, go to a different workspace and click a link on another application. The link will be opened in the existing epiphany window instead of a in a new window in the current workspace as expected. After this first link has been opened the problem will not happen again.
Comment 1 Gustavo Noronha (kov) 2013-08-12 01:57:25 UTC
Created attachment 251314 [details] [review]
Force an update on WNCK's knowledge of windows and workspaces

We need to poke WNCK, otherwise our first call to ephy_window_is_on_current_workspace
will be a false-positive.
Comment 2 Claudio Saavedra 2013-08-14 08:49:08 UTC
Review of attachment 251314 [details] [review]:

Okay, thanks!
Comment 3 Gustavo Noronha (kov) 2013-08-14 11:33:56 UTC
Comment on attachment 251314 [details] [review]
Force an update on WNCK's knowledge of windows and workspaces

3db87856199943b40dd756b381d56b35bd506686
Comment 4 Gustavo Noronha (kov) 2013-08-14 11:34:10 UTC
Thanks!