Force an update on WNCK's knowledge of windows and workspaces

We need to poke WNCK, otherwise our first call to ephy_window_is_on_current_workspace
will be a false-positive.

https://bugzilla.gnome.org/show_bug.cgi?id=705811